fix navbar text-align

--- a/nbs/index.css
+++ b/nbs/index.css
@@ -18,6 +18,7 @@ body {
 
 .navbar {
   background: var(--background);
+  text-align: left;
 }
 
 .title, .navbar-title {
